[package]
name = "cruders"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
axum-test = "14.3.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.108"
surrealdb = { version = "1.0.0", features = ["kv-mem"] }
tokio = { version = "1.0", features = ["full", "macros", "rt-multi-thread"] }
tower = { version = "0.4", features = ["util", "timeout"] }
tower-http = { version = "0.5.1", features = [
  "add-extension",
  "trace",
  "cors",
] }

[lib]
name = "utils"
path = "src/lib.rs"
crate-type = ["lib"]
